downloads: Value returned by ephy_download_get_content_type() should not be freed

ephy_download_get_content_type() was modified to return an existing pointer
instead of a newly allocated string, so its return value should not be freed
by the caller.

https://bugzilla.gnome.org/show_bug.cgi?id=759200